cmake_minimum_required(VERSION 3.21)
project(ComputerCompetition)

set(CMAKE_CXX_STANDARD 14)

add_executable(ComputerCompetition main.cpp)
add_executable(3208 3208.cpp)
add_executable(3207 3207.cpp)
add_executable(3206 3206.cpp)
add_executable(3205 3205.cpp)
add_executable(3204 3204.cpp)
add_executable(3197 3197.cpp)
add_executable(3198 3198.cpp)
add_executable(3199 3199.cpp)
add_executable(3200 3200.cpp)
add_executable(3201 3201.cpp)
add_executable(3202 3202.cpp)
add_executable(3203 3203.cpp)
